# aguila

./: .aguila_history  .gitignore  AGUILA_VS_PYTHON.md  CONTRIBUTING.md  DOCUMENTACION.md  README.md  RELEASE_GUIDE.md  TUTORIAL.md  package-lock.json  probar.sh  prueba_flujo.ag  prueba_vm.ag  test_all_examples.sh
aguila/: Cargo.toml  bench_fib20.ag  bench_fib25.ag  bench_fib30.ag  debug.ag  debug_ci.ag  debug_mandel  debug_output.txt  fib  fib.ag  fib_simple  fib_simple.ag  prueba_imprime.ag  test_features.ag
aguila-vscode/: README.md  language-configuration.json  (+2 more)
aguila/benchmarks/: fib.ag  mandelbrot.ag  run_jit.sh  run_suite.sh  strings.ag
aguila/ejemplos/: algoritmos_avanzados.ag  algoritmos_maestros.ag  algoritmos_parte2.ag  algoritmos_parte3.agl  basico.agl  cliente_tcp.ag  debug_loop.ag  debug_quicksort.ag  fib30.agl  funciones.agl  hola.ag  n_reinas.ag  poo.agl  prueba_control.agl  prueba_errores.agl  prueba_estructuras.agl  prueba_input.agl  prueba_metodos.agl  prueba_operadores.agl  prueba_testing.agl  sanity.ag  servidor_tcp.ag  test_asignacion_indice.agl  test_clase.ag  test_edit_distance.ag  test_gas.ag  test_gas_simple.ag  test_indice.ag  test_islas.agl  test_metodos.agl  test_minimo.ag  test_negativo.ag  test_nreinas.ag  test_rain.ag  test_resta.agl  test_sudoku.ag  test_syntax.ag
aguila/ejemplos/app_completa/: gestor_tareas.agl
aguila/ejemplos/prototipos/: api.agl  base_datos.agl
aguila/ejemplos/prototipos/web/: camara.agl  saludo.agl  servidor.agl
aguila/src/: analyzer.rs  ast.rs  cli.rs  compiler_bytecode.rs  compiler_rust.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  repl.rs  types.rs
aguila/src/compiler/: codegen.rs
aguila/src/stdlib/: lista.rs  mate.rs  mod.rs  net.rs  texto.rs  thread.rs
aguila/src/vm/: chunk.rs  hotspot.rs  inline_cache.rs  jit.rs  mod.rs  object_table.rs  specialization.rs  value.rs  vm.rs
(+27 files in other folders)
