[package]
name = "aguila"
version = "2.5.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.19"
notify = "6.1"
rustyline = "12.0"
rand = "0.8"
chrono = "0.4"
cranelift = "0.126.1"
cranelift-jit = "0.126.1"
cranelift-module = "0.126.1"
cranelift-native = "0.126.1"
cranelift-frontend = "0.126.1"

[[bin]]
name = "aguila"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
